=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 v1.103 - In Development 

=over

=item *

Fix bug that prevents users with "may check in all" permission from 
checking in templates checked out by other users. [Perrin]

=item * Add-On v2

The add-on v2 project is complete, bringing many improvements to the
way Krang add-ons work.  Here's a list of the biggest changes:

=over

=item * Add-ons are now located installed into a separate direction
called C<addons/>.  They may be developed in-place, potentially under
separate version control.

=item * Add-ons may be packaged with dependencies from CPAN in a
C<src/> directory.  The Krang build system will build these modules at
install time.

=item * Add-ons may be uninstalled using the new
C<krang_addon_uninstaller> script.  (This does not apply to addons
installed with the old system.)

=item * Add-ons may register new links in the left-navigation area.

=item * Add-ons may selectively override core Krang classes via
inheritence and the use of the C<conf/class.conf> configuration file.

=item * Add-ons may include SQL source for new tables which will be
included in the databases built by C<krang_createdb>.

=back

=item * WYSIWYG HTML Editor

Added a new element class, Krang::ElementClass::XinhaEditor, which
offers a WYSIWYG HTML editor based on the Xinha Javascript editor.
[Sam]

=item * Build Optimization

The Krang build system no longer builds man-pages for all the modules
it builds.  This reduces the overall build time by about 10%.  [Sam] 

=item * Upgraded to Apache v1.3.33.  

This brings Krang up-to-date with all released Apache security
fixes. [Sam]

=item *

Fixed a bug where setting use_category_templates to 0 in your
top-level class meant no additional_content_blocks will get category
content, regardless of their individual use_category setting. [Sam]

=item *

Fixed a bug where if you set publish_category_per_page to 1 in your